[package]
name = "aori-integration-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dapp"
path = "src/dapp_main.rs"

[[bin]]
name = "build_proto"
path = "build.rs"

[[bin]]
name = "solver"
path = "src/solver_main.rs"

[build-dependencies]
tonic-build = { version = "0.10.2", features = [] }

[dependencies]
ethers = "2.0.11"
aori_requests = "0.1.5"
# { path = "/Users/mahmoud/Documents/workspace-go/aori-sdk-rs/crates/aori_requests" }
aori_types = "0.1.5"
ethereum = "0.15.0"
ethereum-types = "0.14.1"
secp256k1 = { version = "0.28.0", features = [ "recovery"] }
ethereum-private-key-to-address = "0.1"
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tokio-stream = "0.1.14"
tokio-tungstenite = "0.20.1"

eyre = "0.6"
serde_json = "1.0"
# Additional dependencies you might need
dotenv = "0.15"
futures = "0.3"
artemis-core = { git = "https://github.com/paradigmxyz/artemis", branch = "main" }
serde = "1.0.189"
async-trait = "0.1.64"
anyhow = "1.0.70"

websockets = "0.3.0"
tonic = { version = "0.10.2", features = ["tls"]}
prost = "0.12"
prost-types = "0.12"
alloy-primitives = { git = "https://github.com/alloy-rs/core" }

chrono = "0.4.31"
rand = "0.8.5"
num-bigint = "0.4.4"
num-traits = "0.2.17"
